src/assets/_modal.scss
.gds-modal-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.7);
  overflow-x: scroll;

  .modal-content {
    position: relative;
    background-color: $white;
    margin: 100px auto;
    padding: 32px;
    border-radius: 4px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    transition: top 0.4s, opacity 0.4s;
    overflow: scroll;
    z-index: auto;
    box-sizing: border-box;
    max-width: 100%;

    &.shake {
      animation: shake 0.5s;
    }

    &.size-sm {
      width: 300px;
    }

    &.size-lg {
      width: 800px;
    }

    .modal-header {
      display: flex;
      justify-content: space-between;
      border-bottom: 1px solid $chalk;
      padding-bottom: 16px;

      .modal-title {
        font-size: 1.2rem;
      }

      .modal-close-icon {
        margin-left: 16px;
        cursor: pointer;
      }
    }

    .modal-body {
      padding: 16px 0px;
      overflow-y: scroll;
    }

    .modal-footer {
      padding-top: 16px;
      border-top: 1px solid $chalk;
      display: flex;
      flex-direction: row;
      justify-content: end;
      -webkit-justify-content: flex-end;

      & > * {
        margin: auto 4px;
      }
    }
  }
}

@keyframes shake {
  0% {
    transform: skewY(-2deg);
  }
  5% {
    transform: skewY(2deg);
  }
  10% {
    transform: skewY(-2deg);
  }
  15% {
    transform: skewY(2deg);
  }
  20% {
    transform: skewY(0deg);
  }
  100% {
    transform: skewY(0deg);
  }
}

